--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,4 @@
+[done] Fix posting speed displaying
 ? Add ability to set limits for each thread
 * Reload codecha instead of reloading a page
 * Implement proxy blocking
