--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,6 @@
 [done] Fix posting speed displaying
 [done] Improve URL markup
+[done] Fix quick reply from board
 ? Add ability to set limits for each thread
 * Reload codecha instead of reloading a page
 * Implement proxy blocking
