Catch thread exceptions

--- a/TODO.txt
+++ b/TODO.txt
@@ -2,6 +2,7 @@
 [done] Improve URL markup
 [done] Fix quick reply from board
 [done] Add ability to select quick reply action
+[done] Catch thread exceptions
 ? Add ability to set limits for each thread
 * Reload codecha instead of reloading a page
 * Implement proxy blocking
