Fix auto thread update system

--- a/TODO.txt
+++ b/TODO.txt
@@ -3,6 +3,7 @@
 [done] Fix quick reply from board
 [done] Add ability to select quick reply action
 [done] Catch thread exceptions
+[done] Fix auto thread update system
 ? Add ability to set limits for each thread
 * Reload codecha instead of reloading a page
 * Implement proxy blocking
