--- a/TODO.txt
+++ b/TODO.txt
@@ -4,6 +4,7 @@
 [done] Add ability to select quick reply action
 [done] Catch thread exceptions
 [done] Fix auto thread update system
+[done] Add ability to cache posts and dynamic/static files manually
 ? Add ability to set limits for each thread
 * Reload codecha instead of reloading a page
 * Implement proxy blocking
