Show user agent at /d/

--- a/TODO.txt
+++ b/TODO.txt
@@ -6,6 +6,7 @@
 [done] Fix auto thread update system
 [done] Add ability to cache posts and dynamic/static files manually
 [done] Improve rules system
+[done] Show user agent at /d/
 ? Add ability to set limits for each thread
 * Reload codecha instead of reloading a page
 * Implement proxy blocking
