--- a/TODO.txt
+++ b/TODO.txt
@@ -15,6 +15,8 @@
 [done] Store audio/video metadata (duration, bitrate, tags)
 [done] Fix post form rules including system
 [done] Implement Last-Modified/If-Modified-Since support
+[done] Fix thread files downloading
+* In get_new_posts AJAX request, get all posts if last post number is 0
 * Implement Drag and Drop file upload
 * Improve URL detection
 * Implement favorite threads system
