--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,8 @@
 [done] Fix audio tags support
 [done] Fix posting speed counting
+[done] Use localStorage and JS instead of cookies for settings (when possible)
+[done] Remove outdated cookies
+* Use localStorage and JS instead of cookies for post hiding
 * Implement Drag and Drop file upload
 ? Add ability to set limits for each thread
 * Reload codecha instead of reloading a page
