--- a/TODO.txt
+++ b/TODO.txt
@@ -5,7 +5,7 @@
 [done] Use localStorage and JS instead of cookies for settings (when possible)
 [done] Remove outdated cookies
 [done] Use localStorage and JS instead of cookies for post hiding
-* Implement Drag and Drop file upload
+[done] Implement Drag and Drop file upload
 ? Add ability to set limits for each thread
 * Reload codecha instead of reloading a page
 * Implement proxy blocking
