Add ability to minify HTML/JS/CSS

--- a/TODO.txt
+++ b/TODO.txt
@@ -8,6 +8,7 @@
 [done] Implement Drag and Drop file upload
 [done] Show addititonal information about media files
 [done] Add JS functions for adding/removing CSS classes
+[done] Add ability to minify HTML/JS/CSS
 ? Add ability to set limits for each thread
 * Reload codecha instead of reloading a page
 * Implement proxy blocking
