Fix Yandex captcha

--- a/TODO.txt
+++ b/TODO.txt
@@ -10,6 +10,7 @@
 [done] Add JS functions for adding/removing CSS classes
 [done] Add ability to minify HTML/JS/CSS
 [done] Add symbol counter to post form
+[done] Fix Yandex captcha
 ? Add ability to set limits for each thread
 * Reload codecha instead of reloading a page
 * Implement proxy blocking
