--- a/TODO.txt
+++ b/TODO.txt
@@ -12,6 +12,7 @@
 [done] Add symbol counter to post form
 [done] Fix Yandex captcha
 [done] Rename "reload-post-index" into "rebuild-post-index"
+[done] Implement "new-log" command
 ? Add ability to set limits for each thread
 * Reload codecha instead of reloading a page
 * Implement proxy blocking
