Add information about new posts to navigation bar

--- a/TODO.txt
+++ b/TODO.txt
@@ -14,6 +14,7 @@
 [done] Rename "reload-post-index" into "rebuild-post-index"
 [done] Implement "new-log" command
 [done] Add Futaba style
+[done] Add information about new posts to navigation bar
 ? Add ability to set limits for each thread
 * Reload codecha instead of reloading a page
 * Implement proxy blocking
