--- a/TODO.txt
+++ b/TODO.txt
@@ -16,6 +16,7 @@
 [done] Add Futaba style
 [done] Add information about new posts to navigation bar
 [done] Process post text outside transaction
+[done] Fix DB timeout
 * Add ASCII-art tag
 ? Add ability to set limits for each thread
 * Reload codecha instead of reloading a page
