Optimize post text parser

--- a/TODO.txt
+++ b/TODO.txt
@@ -20,6 +20,7 @@
 [done] Add DB indexes
 [done] Add ability to use external libmagic (file utility)
 [done] Add command line option to force application launch if there is another instance running
+[done] Optimize post text parser
 * Add ASCII-art tag
 ? Add ability to set limits for each thread
 * Reload codecha instead of reloading a page
