--- a/TODO.txt
+++ b/TODO.txt
@@ -2,6 +2,7 @@
 [done] Use QMimeDatabase for MIME type detection with Qt5
 [done] Fix complain button sound
 [done] Fix thread subject displaying
+[done] Fix referencing posts properly when deleting referenced post
 ? Add ASCII-art tag
 ? Add ability to set limits for each thread
 * Reload codecha instead of reloading a page
