--- a/TODO.txt
+++ b/TODO.txt
@@ -3,6 +3,7 @@
 [done] Fix complain button sound
 [done] Fix thread subject displaying
 [done] Fix referencing posts properly when deleting referenced post
+* Improve minification
 ? Add ASCII-art tag
 ? Add ability to set limits for each thread
 * Reload codecha instead of reloading a page
