Improve board speed storage

--- a/TODO.txt
+++ b/TODO.txt
@@ -4,6 +4,8 @@
 [done] Fix thread subject displaying
 [done] Fix referencing posts properly when deleting referenced post
 [done] Fix [url] tag markup
+* Improve tripcode displaying
+[done] Improve board speed storage
 * Improve minification
 ? Add ASCII-art tag
 ? Add ability to set limits for each thread
