Hide post actions

--- a/TODO.txt
+++ b/TODO.txt
@@ -7,6 +7,7 @@
 [done] Improve tripcode displaying
 [done] Improve board speed storage
 [done] Add download buttons to playlist
+[done] Hide post actions
 * Improve minification
 ? Add ASCII-art tag
 ? Add ability to set limits for each thread
