--- a/TODO.txt
+++ b/TODO.txt
@@ -10,6 +10,7 @@
 [done] Hide post actions
 [done] Fix post editing
 [done] Save post text index and captcha quota periodically
+[done] Improve time zone handling
 * Improve minification
 ? Add ASCII-art tag
 ? Add ability to set limits for each thread
