--- a/TODO.txt
+++ b/TODO.txt
@@ -11,6 +11,8 @@
 [done] Fix post editing
 [done] Save post text index and captcha quota periodically
 [done] Improve time zone handling
+[done] Fix file copying (Database::copyFile)
+[done] Fix JS
 * Improve minification
 ? Add ASCII-art tag
 ? Add ability to set limits for each thread
