Expand posts when YouTube video is eapanded

--- a/TODO.txt
+++ b/TODO.txt
@@ -16,6 +16,7 @@
 [done] Improve custom content system
 [done] Fix captcha engine selection
 [done] Select appropriate suffix for file according to MIME type
+[done] Expand posts when YouTube video is eapanded
 * Improve minification
 ? Add ASCII-art tag
 ? Add ability to set limits for each thread
