Make file logo images transparent

--- a/TODO.txt
+++ b/TODO.txt
@@ -18,6 +18,7 @@
 [done] Select appropriate suffix for file according to MIME type
 [done] Expand posts when YouTube video is eapanded
 [done] Fix YouTube video ID detection
+[done] Make file logo images transparent
 * Add ability to edit audio tags
 * Improve minification
 ? Add ASCII-art tag
