Add ability to edit audio tags

--- a/TODO.txt
+++ b/TODO.txt
@@ -20,8 +20,9 @@
 [done] Fix YouTube video ID detection
 [done] Make file logo images transparent
 [done] Generate random thumbnails for audio files
-* Add ability to edit audio tags
+[done] Add ability to edit audio tags
 * Improve minification
+* Add tooltip tag/markup
 ? Add ASCII-art tag
 ? Add ability to set limits for each thread
 * Reload codecha instead of reloading a page
