Use hidden input for last post number info

--- a/TODO.txt
+++ b/TODO.txt
@@ -23,6 +23,7 @@
 [done] Add ability to edit audio tags
 [done] Add tooltip tag/markup
 [done] Use "constants" for JSON-RPC method IDs
+[done] Use hidden input for last post number info
 * Improve minification
 ? Add ASCII-art tag
 ? Add ability to set limits for each thread
