--- a/TODO.txt
+++ b/TODO.txt
@@ -25,6 +25,7 @@
 [done] Use "constants" for JSON-RPC method IDs
 [done] Use hidden input for last post number info
 [done] Do not render raw post text on pages, load it on demand
+[done] Get new post count for all boards by one request
 * Improve minification
 ? Add ASCII-art tag
 ? Add ability to set limits for each thread
