Implement "uptime" command

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,7 @@
+[done] Implement "uptime" command
+* Implement "ascetic" mode
+* Use D-Pointer approach for the lib
+
 * Improve minification
 * Reload codecha instead of reloading a page
 * Implement proxy blocking
-* Make HTML compatible with Dollchan Extension Tools
