--- a/TODO.txt
+++ b/TODO.txt
@@ -3,6 +3,9 @@
 [done] Remove minification feature
 [done] Add error 413 description
 [done] Improve vote system
+[done] Change strikeout markup from double hyphen to triple hyphen
+[done] Replace two consequent hyphen by en-dash (shorter) and four consequent hyphens by em-dash (longer)
+* Show if file exists on server when it is uploaded
 * Implement "ascetic" mode
 * Use D-Pointer approach for the lib
 
