--- a/TODO.txt
+++ b/TODO.txt
@@ -5,7 +5,8 @@
 [done] Improve vote system
 [done] Change strikeout markup from double hyphen to triple hyphen
 [done] Replace two consequent hyphen by en-dash (shorter) and four consequent hyphens by em-dash (longer)
-* Show if file exists on server when it is uploaded
+[done] Show if file exists on server when it is uploaded
+* Improve joky boards
 * Implement "ascetic" mode
 * Use D-Pointer approach for the lib
 
