--- a/TODO.txt
+++ b/TODO.txt
@@ -8,6 +8,7 @@
 [done] Show if file exists on server when it is uploaded
 [done] Enable access to joky boards
 [done] Fix WakabaMark markup
+[done] Add /po/ board
 * Implement "ascetic" mode
 * Use D-Pointer approach for the lib
 
