--- a/TODO.txt
+++ b/TODO.txt
@@ -10,6 +10,7 @@
 [done] Fix WakabaMark markup
 [done] Add /po/ board
 [done] Use AJAX or simple replies depending on situation
+[done] Fix translations
 * Add bump limit and post limit icons
 * Implement "ascetic" mode
 * Use D-Pointer approach for the lib
