--- a/TODO.txt
+++ b/TODO.txt
@@ -11,8 +11,8 @@
 [done] Add /po/ board
 [done] Use AJAX or simple replies depending on situation
 [done] Fix translations
+[done] Implement "ascetic" mode
 * Add bump limit and post limit icons
-* Implement "ascetic" mode
 * Use D-Pointer approach for the lib
 
 * Reload codecha instead of reloading a page
