Add framesets for settings groups

--- a/TODO.txt
+++ b/TODO.txt
@@ -13,6 +13,7 @@
 [done] Fix translations
 [done] Implement "ascetic" mode
 [done] Add bump limit and post limit icons
+[done] Add framesets for settings groups
 * Use D-Pointer approach for the lib
 
 * Reload codecha instead of reloading a page
