--- a/TODO.txt
+++ b/TODO.txt
@@ -16,6 +16,8 @@
 [done] Add framesets for settings groups
 [done] Add draft icon
 [done] Add settings option to make posts drafts by default
+[done] Add playlist, markup and homepage icons to navbar
+[done] Add framed version
 * Use D-Pointer approach for the lib
 
 * Reload codecha instead of reloading a page
