--- a/TODO.txt
+++ b/TODO.txt
@@ -20,6 +20,8 @@
 [done] Add framed version
 [done] Add ability to hide selected boards
 [done] Add ability to set whether to show new posts and whether to show YouTube videos titles
+[done] Add ability to disable checking existence of a file on server
+[done] Add ability to disable loading previews of attached image files
 * Use D-Pointer approach for the lib
 
 * Reload codecha instead of reloading a page
