Allow multiple simultaneous transactions

--- a/TODO.txt
+++ b/TODO.txt
@@ -22,6 +22,7 @@
 [done] Add ability to set whether to show new posts and whether to show YouTube videos titles
 [done] Add ability to disable checking existence of a file on server
 [done] Add ability to disable loading previews of attached image files
+[done] Allow multiple simultaneous transactions
 * Use D-Pointer approach for the lib
 
 * Reload codecha instead of reloading a page
