--- a/TODO.txt
+++ b/TODO.txt
@@ -24,6 +24,8 @@
 [done] Add ability to disable loading previews of attached image files
 [done] Allow multiple simultaneous transactions
 [done] Replace login info text with icon
+[done] Add PDF support
+[done] Add login system description
 * Use D-Pointer approach for the lib
 
 * Reload codecha instead of reloading a page
