--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,18 @@
 [done] Fix /rpg/ JS
 [done] Add ability to leaf through files
+[done] Add ability to set image zoom sensitivity
+* Implement auto update timer
+* Implement desktop notifications
+* Add ability to hide names/tripcodes
+* Add ability to set default audio/video files volume
+* Strike out links to hidden posts
+* Add ability to remove EXIF information from images
+* Add ability to automatically mark a thread as favofite when posting a reply
+* Add markup buttons bar
+* Add ability to hide postform rules
+* Implement user CSS
+* Implement hotkeys
+* Implement auto post hiding system
 
 * Reload codecha instead of reloading a page
 * Implement proxy blocking
