Split settings into groups using tabs

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,6 @@
 [done] Fix /rpg/ JS
 [done] Fix settings dialog size
+[done] Split settings into groups using tabs
 [done] Add ability to leaf through files
 [done] Add ability to set image zoom sensitivity
 [done] Implement auto update timer
