Implement user CSS

--- a/TODO.txt
+++ b/TODO.txt
@@ -6,13 +6,13 @@
 [done] Implement auto update timer
 [done] Implement desktop notifications
 [done] Add ability to hide postform rules
+[done] Implement user CSS
 * Add ability to hide names/tripcodes
 * Add ability to set default audio/video files volume
 * Strike out links to hidden posts
 * Add ability to remove EXIF information from images
 * Add ability to automatically mark a thread as favofite when posting a reply
 * Add markup buttons bar
-* Implement user CSS
 * Implement hotkeys
 * Implement auto post hiding system
 
