Strike out links to hidden posts

--- a/TODO.txt
+++ b/TODO.txt
@@ -8,8 +8,8 @@
 [done] Add ability to hide postform rules
 [done] Implement user CSS
 [done] Add ability to hide tripcodes/user names
+[done] Strike out links to hidden posts
 * Add ability to set default audio/video files volume
-* Strike out links to hidden posts
 * Add ability to remove EXIF information from images
 * Add ability to automatically mark a thread as favofite when posting a reply
 * Add markup buttons bar
